<resources>
    <string name="app_name">BookReport</string>
    <string name="btn_register">로그인/회원가입 -></string>
<<<<<<< HEAD
    <string name="btn_reset_password1">PW 재설정</string>
=======
    <string name="btn_findId">비밀번호 찾기</string>
>>>>>>> feature#hyeongu
    <string name="btn_guestMode">게스트 모드</string>
    <string name="btn_help">도움말</string>
    <string name="btn_setting">설정</string>
    <string name="btn_info">앱 정보</string>
    <string name="hin_email">아이디</string>
    <string name="login_password">비밀번호</string>
    <string name="find_password">비밀번호를 잊으셨습니까?</string>
    <string name="btn_login">로그인</string>
    <string name="tx_go_register">등록된 계정이 없으신가요?</string>
    <string name="btn_register1">회원가입</string>
    <string name="tx_nickname">닉네임</string>
    <string name="edt_nickname">닉네임을 입력하세요</string>
    <string name="edt_email">이메일을 입력하세요</string>
    <string name="tx_password">비밀번호</string>
    <string name="edt_password">비밀번호를 입력하세요</string>
    <string name="tx_passConfirm">비밀번호 확인</string>
    <string name="edt_passConfirm">비밀번호를 한번 더 입력해주세요</string>
    <string name="btn_register3">회원가입</string>
    <string name="tx_register">회원가입</string>
<<<<<<< HEAD
    <string name="tx_passwordReset1">비밀번호 재설정</string>
    <string name="tx_passwordReset2">재설정 비밀번호</string>
    <string name="tx_passwordResetConfirm">재설정 비밀번호 확인</string>
    <string name="btn_reset_password2">이메일 전송</string>
    <string name="tx_app_info">앱 정보</string>
    <string name="tx_terms_of_use">이용약관</string>
    <string name="tx_terms_of_use_content">본 약관은 \'북 리포트\'가 제공하는 서비스 및 관련 제반 서비스의 이용과 관련하여 당사와 서비스 이용자간에 권리ㆍ의무 및 기타 필요한 사항을 규정함을 목적으로 합니다.</string>
    <string name="tx_tepersonal_information_processing">개인정보 처리방침</string>
    <string name="tx_tepersonal_information_processing_content">\'북 리포트\'는 개인정보보호법, 정보통신망 이용촉진 등에 관한 법률 등 정보통신 서비스 제공자가 준수하여야 할  관련 법령상의 개인정보보호 규정을 준수하며, 관련 법령에 의거한 개인정보 처리방침을 정하여 회원 권익 보호에 최선을 다하고 있습니다.</string>
    <string name="tx_app_version">앱 버전</string>
    <string name="tx_app_version_content">1.0.0</string>
    <string name="tx_app_guide">이용방법</string>
    <string name="tx_home">홈</string>
    <string name="tx_home_guide_content">홈 화면에서는 자신이 작성한 독후감을 볼 수 있어요.\n만약 독후감을 많이 작성해 독후감을 찾기 어렵다면 검색창을 이용해 자신이 작성한 독후감을 찾아보세요.\n\n오른쪽 아래에 있는 "+"를 클릭해 독후감을 작성할 수 있어요.\n자신이 읽은 책은 책 선택하기를 선택해 책을 선택할 수 있습니다.\n\n제목과 내용을 작성한 후 등록버튼을 눌러 독후감을 작성해보세요.</string>
    <string name="tx_search">검색</string>
    <string name="tx_search_guide_content">무슨 책을 읽을지 고민되시나요?\n\n다른 사람들이 미리 읽고 남긴 후기를 참고해보세요.\n후기가 궁금한 책을 검색해 클릭하면 다른 사람들이 읽고 남긴 후기를 볼 수 있습니다. </string>
    <string name="tx_account">계정</string>
    <string name="tx_account_guide_content">계정에 관련된 사항이 필요하신가요?(ex:회원가입)\n\n계정탭에 들어가시면 계정에 관련된 모든 것을 할 수 있습니다.\n\n또한 회원가입이 귀찮은 분들을 위해 게스트 모드로 접속이 가능합니다.\n게스트 모드로 접속시 책에 대한 후기를 남기는 기능 빼고 모두 이용이 가능하십니다.</string>
    <string name="tx_reset_pw_guide">*설정된 이메일로 비밀번호 재설정을 위한 메일을 발송해드립니다*</string>
    <string name="tx_add_book_report">등록하기</string>
    <string name="tx_edit_book_report">수정하기</string>
    <string name="tx_delete_book_report">삭제하기</string>
=======
    <string name="dialog_guest">게스트 모드로 전환하시겠습니까?</string>
    <string name="tx_loginState">로그인이 필요합니다.</string>

>>>>>>> feature#hyeongu
</resources>